added the dataset and init

--- a/proj.Rmd
+++ b/proj.Rmd
@@ -1,31 +1,12 @@
-# Consumo de Gás em Portugal
-
-O consumo corresponde à totalidade do gás natural consumido diariamente em Portugal Continental. Está repartido por dois segmentos de mercado principais:
-Mercado Elétrico, que corresponde ao gás natural consumido pelas centrais de ciclo combinado para produção de eletricidade e Mercado Convencional, que corresponde ao gás natural de consumo doméstico e industrial.
-Por sua vez, o Mercado Convencional está repartido em três categorias: GRMS – Distribuição, que corresponde ao gás entregue nas GRMS para consumo nas Redes de Distribuição, Clientes Alta Pressão, que corresponde ao gás entregue nas GRMS para consumo de clientes ligados diretamente à rede de Alta Pressão, e ainda UAG – Unidades Autónomas de Gaseificação, que corresponde ao gás consumido a partir de unidades que não estão ligadas diretamente ao gasoduto.
-O dia gás é definido como o período compreendido entre as 5h00 e as 5h00 do dia seguinte.
-
-No´s vamos nos focar apenas no Consumo geral de gas a nivel nacional.
-
-Link para o dataset: [https://dados.gov.pt/pt/datasets/diagrama-consumo-diario-gas-3/](https://dados.gov.pt/pt/datasets/diagrama-consumo-diario-gas-3/)
-
-The main objectives of this project are:
-
-- Exploratory analysis of the time series behavior
-- Testing for stationarity
-- Identifying and estimating appropriate models
-- Diagnosing model residuals
-- Producing forecasts and interpreting results
+# akakfakvk
 
 
 # Exploratory data analysis
 
 ```{r}
-dados <- read.csv2("./data/data.csv", skip = 2)
-dados$Data <- as.POSIXct(dados$Data.e.Hora, format="%Y-%m-%d %H:%M:%S")
+dados <- read.csv("data/1-rainfalltemp.csv")
 names(dados)
 head(dados)
-
 ```
 The dataset should be checked for any missing values:
 
@@ -46,12 +27,46 @@ boxplot(dados$Consumo, main = "Boxplot do Consumo de Gás", col = "lightblue")
 Como podemos ver no boxplot nao temos outliers.
 
 ```{r}
+library(dplyr)
+library(lubridate)
+
+dados_filtrados <- dados %>%
+  filter(month(Data) >= 6 & month(Data) <= 7)
 
 
+plot(dados_filtrados$Data, dados_filtrados$Consumo, type = "l", col = "blue",
+     main = "Consumo de Gás em Portugal",
+     xlab = "Data", ylab = "Consumo",
+     lwd = 2)
+
+dados_filtrados
 ```
 
 
+```{r}
+dados_filtrados$Consumo <- as.numeric(as.character(dados_filtrados$Consumo))
 
+
+ts_aa <- ts(dados_filtrados$Consumo, start = c(2021, 152), frequency = 24)
+plot(ts_aa)
+library(forecast)
+arima <- auto.arima(ts_aa, seasonal = TRUE)
+
+summary(arima)
+
+checkresiduals(arima)
+```
+
+```{r}
+a <- arima$fitted
+
+plot(a)
+plot(ts_aa)
+```
+```{r}
+model <- stlm(ts_aa, s.window = "periodic", method = "arima")
+checkresiduals(model)
+```
 
 
 
